# Lighthouse

./: .gitignore  .mcp.json  AGENTS.md  ATLAS_AXIS_PROPOSAL.md  AUTHORITY.md  BENCHMARK_PUBLIC_VERIFY.md  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  COOKBOOK.md  Dockerfile  FABLE_AXES_BRIEF.md  FOR_AI_AGENTS.md  GLOSSARY.md  KNOWN_ISSUES.md  LICENSE  LICENSING.md  NEXT_SPRINT.md  NOTICE  OPERATOR.md  README.md  RELEASING.md  REPO_MAP.md  ROADMAP.md  SECURITY.md  canon.yaml  concordance_mcp_server.py  index.html  lighthouse_edge_v01.html  lighthouse_edge_v02.html  llms.txt  openapi.json  packet_manifest.yaml  pyproject.toml  railway.toml  validate_training_files.py
android/: gradlew  settings.gradle
api/: agent_daily.py  agent_manifest.py  apothecary.py  apothecary_feedback.py  apothecary_journal.py  app.py  archetypes.py  arrangement.py  atlas.py  calibre.py  card_ssr.py  cards.py  case_store.py  coach_journal.py  codex.py  community.py  daily.py  daily_card.py  daily_comments.py  deep_health.py  deployment_mode.py  derivation.py  didache.py  embeddings.py  engine_feed.py  fast_live.py  feed_walks.py  feeds.py  floor.py  flows.py  fountain.py  funnel.py  generate_gated.py  harmonics.py  hearth.py  i18n_strings.py  intake_worker.py  keep_dashboard.py  ledger.py  local_llm.py  (+60 more)
canons/: README.md
chemistry/: canon.yaml
client/: README.md  apple_shortcut.md  arweave_upload.py  cas_store.py  concordance_client.py  digest_mail.py  email_webhook.md  ipfs_pin.py  meshtastic_bridge.py  nostr_publish.py  qr_share.md  reference_agent.py  telegram_bot.py  tor_onion.md  watch_folder.py
computer_science/: README.md  canon.yaml
data/: github_traffic.jsonl
discovery/: REGISTRY_LISTING.md  server.json
docs/: AGENT_SURFACE_AUDIT.md  BACKUP.md  CANON.md  CHATGPT_ACTION_SETUP.md  COMPANION.md  CONCORDANCE.md  CONNECTIONS_SCOPE.md  CONTRIBUTION_PROTOCOL.md  DATA_SOURCES.md  DISPATCH_DRIFT.md  HETZNER_SETUP.md  HORIZONS.md  KERNEL.md  LAYERS.md  MARKETPLACE_V1.md  MCP_QUICKSTART.md  MIGRATION.md  MONOLITH_DECOMPOSITION.md  ORG_NOTARY_REGISTRY.md  PRE_TRAFFIC_SECURITY.md  PUNCH_LIST.md  SITE_AUDIT.md  SITE_CONSOLIDATION.md  STANDALONE_MODEL.md  STATUS.md  THE_GUIDE.md  THE_WEDGE.md  USER_LAYER.md  WALKTHROUGH.md
eval/: BENCHMARK.md  README.md  adapter_example.py  full_eval_dataset_with_metadata.json  run_eval.py  sample_predictions.jsonl
examples/: sample_confession.json  sample_packet_biology_hardy_weinberg.json  sample_packet_business_decision.json  sample_packet_chemistry_verify.json  sample_packet_cs_determinism.json  sample_packet_jda_phase1_fund.json  sample_packet_math_inequality.json  sample_packet_math_matrix.json  sample_packet_physics_named_conservation.json  sample_packet_scripture_anchored.json  sample_packet_stats_paired_t.json
governance/: cas_governance_v1.1.md
local/: backup_journal.ps1  backup_ledger.ps1  backup_offsite.ps1  backup_to_drive.ps1  backup_to_r2.sh  build-image.sh  concordance-firstboot.service  concordance-firstboot.sh  concordance.txt.example  configure_tunnel_ingress.ps1  deploy_session_2026-06-06.ps1  deploy_session_2026-06-07.ps1  diagnose.ps1  finish_rotation.ps1  fix_task.ps1  go_live.ps1  install.sh  install_services.ps1  node-init.py  pi-prep.sh  refresh_channel.ps1  register_api_task.ps1  repair_cloudflared.ps1  restart_services.ps1  rotate_tunnel_token.ps1  run_manual.ps1  setup.ps1  setup_channel_daily.ps1  setup_channel_refresh.ps1  setup_channel_supervisor.ps1  setup_daily_rebuild.ps1  setup_supervision.ps1  setup_watchdog.ps1  sync_substrate.ps1  termux-setup.sh  watchdog.ps1
lw/: README.md  WORKING_STATE.md
lw/09_calibre/calibre_ai_package/: README.md  pyproject.toml
lw/09_calibre/calibre_ai_package/calibre/: __init__.py  engine.py  formulas.py  model.py
lw/09_calibre/calibre_ai_package/docs/: spec.md
lw/_archive_iterations/01_engine_2026-05-02_pre_consolidation/concordance-engine/: CHANGELOG.md  CONTRIBUTING.md  concordance_mcp_server.py  packet_manifest.yaml  pyproject.toml
lw/_archive_iterations/01_engine_2026-05-02_pre_consolidation/concordance-engine/docs/: MIGRATION.md  WALKTHROUGH.md
lw/_archive_iterations/01_engine_2026-05-02_pre_consolidation/concordance-engine/eval/: eval_chat.jsonl
lw/_archive_iterations/01_engine_2026-05-02_pre_consolidation/concordance-engine/examples/: sample_packet_chemistry.json  sample_packet_governance_verify.json  sample_packet_math_verify.json  sample_packet_physics_verify.json  sample_packet_statistics_verify.json
lw/_archive_iterations/01_engine_2026-05-02_pre_consolidation/concordance-engine/schema/: packet.schema.aspirational.json  packet.schema.json
lw/_archive_iterations/01_engine_2026-05-02_pre_consolidation/concordance-engine/src/concordance_engine/: __init__.py  cli.py  nl_to_packet.py  validate.py
lw/_archive_iterations/01_engine_2026-05-02_pre_consolidation/concordance-engine/src/concordance_engine/domains/: __init__.py
lw/_archive_iterations/01_engine_2026-05-02_pre_consolidation/concordance-engine/src/concordance_engine/mcp_server/: tools.py
lw/_archive_iterations/01_engine_2026-05-02_pre_consolidation/concordance-engine/src/concordance_engine/verifiers/: __init__.py  biology.py  governance.py  physics.py  statistics.py
lw/_archive_iterations/01_engine_2026-05-02_pre_consolidation/concordance-engine/tests/: test_engine.py  test_nl_to_packet.py  test_verifiers.py
mathematics/: canon.yaml
physics/: README.md
schema/: card.schema.json  packet.schema.json
scripts/: adapt_dade_to_radio.py  add_a11y_to_pages.py  add_audio_js.py  add_i18n_to_pages.py  add_lens_polish.py  add_mobile_css.py  add_tool_strip.py  add_vibe.py  add_you_js.py  batch_dade_s1.py  build_bible_alignment.py  build_bible_alignment_reverse.py  build_binary.sh  extract_aesop.py  extract_apokalypsis_epub.py  extract_classics.py  extract_classics_more.py  extract_classics_v3.py  extract_devotionals.py  extract_easton.py  extract_ebible_vpl.py  extract_koa_epubs.py  extract_kogoyaku.py  extract_kougo_osis.py  extract_molasses_epub.py  extract_pilgrim.py  extract_pirkei_avot.py  fetch_fred.py  (+40 more)
(+12250 files in other folders)
