[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"




[project]
name = "concordance-engine"
version = "1.0.6"
description = "Concordance is a Wisdom Engine. Four gates — RED, FLOOR, BROTHERS, GOD — slow every decision down until witnesses, scripture, and structure have done their work."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = [
  "validation", "verification", "mcp", "ai-tools", "decision-engine",
  "four-gates", "computational-verification", "authority-validation",
  "chemistry", "physics", "mathematics", "statistics", "governance"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "sympy>=1.12",
  "numpy>=1.26",
  "scipy>=1.11",
]



