[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "calibre"
version = "0.2.0"
description = "Ledgerless alignment/calibration engine (triadic flow, law-shadow, vice)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
